--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
-Revision history for RT-Extension-LDAPImport-MuliEmail
+Revision history for RT-Extension-LDAPImport-MultiEmail
 
-0.02 - 2014-01-27
-    Initial release
+0.03 2014-07-16
+ - Support more than one secondary email address attribute
+ - Packaging updates
+
+0.02 2014-01-27
+ - Initial release
